Mon  20 Jan 2012 11:22:00 GMT - Release 0.96
  Added fix for RT 63537 (from Gerv) and tests to check it.

Wed  04 Jan 2012 19:34:00 GMT - Release 0.95
  Fix regex for JSONP parameter name to be able to include the . chatacter
  in Catalyst::Action::Serialize::JSONP. RT#73741

  Add optional location parameter to status_accepted handler. RT#73691 (ghenry)

Fri  09 Dec 2011 08:35:00 GMT - Release 0.94
  Add 403 Forbidden and 302 Not Found status methods to
  Catalyst::Controller::REST (Caleb Cushing)

Wed  12 Oct 2011 11:37:00 CDT - Release 0.93
  Add a "Callback" serializer/deserializer to allow for more customization in
  how the REST data is parsed/generated (bphillips)

Sat  01 Oct 2011 11:04:00 BST - Release 0.92
  Add a Catalyst::Action::DeserializeMultiPart, allowing one part of a multipart
  request to be deserialized as the REST data (allowing other parts to be used for
  file uploads, for example) (bphillips)

Thu  04 Aug 2011 14:37:21 CEST - Release 0.91
  For the deserialization action class, make the HTTP methods it operates on
  configurable on a per-action level (plu, rafl).

Fri  25 Feb 2011 13:56:00 GMT - Release 0.90
  Remove test which is no longer applicable and fails in the latest Catalyst
  release.

Mon  24 Jan 2011 21:57:42 GMT - Release 0.89
  All classes are now made immutable. (Dave Rolsky)

  Added a Catalyst::Action::REST::ForBrowsers class. This will try to dispatch
  GET requests to a foo_GET_html method before trying foo_GET. (Dave Rolsky)

Tue  11 Jan 2011 23:07:00 GMT - Release 0.88
  Fix documentation for overriding Serialize and Deserialize actions
  in Catalyst::Controller::REST.

  Avoid warning with empty response bodies and new Catalyst version
  (>= 5.80030)

  Returning a body of '' is now possible - Catalyst::Action::Serialize
  acts like Catalyst::Action::RenderView (>= 0.16) by using the has_body
  predicate in Catalyst::Response (>= 5.80030)

Wed  3 Nov 2010 19:46:00 GMT - Release 0.87
