@@ -1,8 +1,12 @@
+Tue  21 Feb 2012 09:58:00 GMT - Release 0.97
+  Fix test with latest Catalyst version which passes _log into
+  requests.
+
 Mon  20 Jan 2012 11:22:00 GMT - Release 0.96
   Added fix for RT 63537 (from Gerv) and tests to check it.
 
 Wed  04 Jan 2012 19:34:00 GMT - Release 0.95
-  Fix regex for JSONP parameter name to be able to include the . chatacter
+  Fix regex for JSONP parameter name to be able to include the . character
   in Catalyst::Action::Serialize::JSONP. RT#73741
 
   Add optional location parameter to status_accepted handler. RT#73691 (ghenry)
